register form ui changes

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -43,6 +43,7 @@
                 <p class="font-normal text-2xl line-height-3 md:mt-3 text-gray-700">Which can be replaced with some
                     markup </p>
                 <button pButton pRipple type="button" label="Contact Us" style="margin-bottom:10px; border-radius: 5px"
+                    [routerLink]="'/register'"
                     class="p-button-rounded text-xl border-none mt-3 bg-blue-500 font-normal line-height-3 px-3 text-white"></button>
             </div>
             <!-- <div class="flex justify-content-center md:justify-content-end">
