--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,32 +9,17 @@
                     <div class="text-900 text-3xl font-medium mb-3">Welcome, Isabel!</div>
                     <span class="text-600 font-medium">Sign in to continue</span>
                 </div> -->
-
+                <p *ngIf="validationErrors.length > 0" class='text-center'>
+                    <small class='text-danger'>{{validationErrors}}</small>
+                </p>
                 <div>
                     <label for="email1" class="block text-900 text-xl font-medium mb-2">Email</label>
                     <input id="email1" type="text" placeholder="Email address" pInputText class="w-full md:w-30rem mb-5"
-                        style="padding:1rem">
+                        style="padding:1rem" [(ngModel)]="email">
 
                     <label for="password1" class="block text-900 font-medium text-xl mb-2">Password</label>
-                    <!-- <p-password id="password1" [(ngModel)]="password" placeholder="Password" [toggleMask]="true"
-                        styleClass="mb-5" inputStyleClass="w-full p-3 md:w-30rem"></p-password> -->
-
-                    <p-password [(ngModel)]="password" placeholder="Password" [toggleMask]="true" styleClass="mb-5"
-                        inputStyleClass="w-full p-3 md:w-30rem">
-                        <ng-template pTemplate="header">
-                            <h6>Pick a password</h6>
-                        </ng-template>
-                        <ng-template pTemplate="footer">
-                            <hr />
-                            <p class="mt-2">Suggestions</p>
-                            <ul class="pl-2 ml-2 mt-0" style="line-height: 1.5">
-                                <li>At least one lowercase</li>
-                                <li>At least one uppercase</li>
-                                <li>At least one numeric</li>
-                                <li>Minimum 8 characters</li>
-                            </ul>
-                        </ng-template>
-                    </p-password>
+                    <p-password id="password1" [(ngModel)]="password" placeholder="Password" [toggleMask]="true"
+                        styleClass="mb-5" inputStyleClass="w-full p-3 md:w-30rem"></p-password>
 
                     <div class="flex align-items-center justify-content-between mb-5 gap-5">
                         <!-- <div class="flex align-items-center">
@@ -44,7 +29,7 @@
                         <a class="font-medium no-underline ml-2 text-right cursor-pointer"
                             style="color: var(--primary-color)">Forgot password?</a>
                     </div>
-                    <button pButton pRipple label="Sign In" class="w-full p-3 text-xl" [routerLink]="['/']"></button>
+                    <button pButton pRipple label="Sign In" class="w-full p-3 text-xl" (click)="login()"></button>
                 </div>
             </div>
         </div>
