--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -11,47 +11,47 @@
                 </div> -->
                 <form #registerForm="ngForm" (ngSubmit)="onSubmit(registerForm)">
 
-                    <div class="form-group">
+                    <div class="form-group mb-5">
                         <label for="firstName" class="block text-900 text-xl font-medium mb-2">First Name</label>
                         <input id="firstName" name="firstName" [(ngModel)]="firstName" required minlength="2"
-                            #fName="ngModel" type="text" placeholder="First Name" pInputText
-                            class="w-full md:w-30rem mb-5" style="padding:1rem">
+                            #fName="ngModel" type="text" placeholder="First Name" pInputText class="w-full md:w-30rem"
+                            style="padding:1rem">
                         <div *ngIf="fName.invalid && fName.touched" class="text-danger">
                             <small>First Name is required and must be at least 2 characters.</small>
                         </div>
                     </div>
 
-                    <div class="form-group">
+                    <div class="form-group mb-5">
                         <label for="lastName" class="block text-900 text-xl font-medium mb-2">Last Name</label>
                         <input id="lastName" name="lastName" [(ngModel)]="lastName" required minlength="2"
-                            #lName="ngModel" type="text" placeholder="Last Name" pInputText
-                            class="w-full md:w-30rem mb-5" style="padding:1rem">
+                            #lName="ngModel" type="text" placeholder="Last Name" pInputText class="w-full md:w-30rem"
+                            style="padding:1rem">
                         <div *ngIf="lName.invalid && lName.touched" class="text-danger">
                             <small>Last Name is required and must be at least 2 characters.</small>
                         </div>
                     </div>
 
-                    <div class="form-group">
+                    <div class="form-group mb-5">
                         <label for="mobile" class="block text-900 text-xl font-medium mb-2">Mobile</label>
                         <input id="mobile" name="mobile" [(ngModel)]="mobile" required #mob="ngModel" type="text"
-                            placeholder="Mobile #" pInputText class="w-full md:w-30rem mb-5" pattern="^\d{10}$"
+                            placeholder="Mobile #" pInputText class="w-full md:w-30rem" pattern="^\d{10}$"
                             style="padding:1rem">
                         <div *ngIf="mob.invalid && mob.touched" class="text-danger">
                             <small>Mobile number is required and must be a valid 10-digit number.</small>
                         </div>
                     </div>
 
-                    <div class="form-group">
+                    <div class="form-group mb-5">
                         <label for="email" class="block text-900 text-xl font-medium mb-2">Email</label>
                         <input id="email" name="email" [(ngModel)]="email" required #emailId="ngModel" type="text" email
-                            placeholder="Email" pInputText class="w-full md:w-30rem mb-5" style="padding:1rem">
+                            placeholder="Email" pInputText class="w-full md:w-30rem" style="padding:1rem">
                         <div *ngIf="emailId.invalid && emailId.touched" class="text-danger">
                             <small>Email is required and must be a valid email address.</small>
                         </div>
                     </div>
 
                     <button type="submit" class="btn btn-primary" [disabled]="registerForm.invalid"
-                        style="padding:1rem; margin-top:1rem">Register</button>
+                        style="padding:1rem;">Register</button>
                 </form>
             </div>
         </div>
