--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -2,7 +2,7 @@
     <div id="home" class="landing-wrapper overflow-hidden">
         <div
             class="py-4 px-4 mx-0 md:mx-6 lg:mx-8 lg:px-8 flex align-items-center justify-content-between relative lg:static mb-3">
-            <a class="flex align-items-center" href="#" [routerLink]="'/dashboard'">
+            <a class="flex align-items-center" href="#" [routerLink]="'/'">
                 <!-- <img src="assets/layout/images/{{layoutService.config().colorScheme === 'light' ? 'logo-dark' : 'logo-white'}}.svg"
                     alt="Sakai Logo" height="50" class="mr-0 lg:mr-2"> -->
                 <span class="text-900 font-medium text-2xl line-height-3 mr-8" style="white-space: nowrap">KARES
@@ -17,10 +17,16 @@
                 <ul
                     class="list-none p-0 m-0 flex lg:align-items-center select-none flex-column lg:flex-row cursor-pointer">
                     <li>
-                        <!-- <a (click)="router.navigate(['/landing'], {fragment: 'home'})" pRipple
+                        <a (click)="router.navigate(['/'])" pRipple
                             class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
                             <span>Home</span>
-                        </a> -->
+                        </a>
+                    </li>
+                    <li>
+                        <a (click)="router.navigate(['/aboutUs'])" pRipple
+                            class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
+                            <span>About Us</span>
+                        </a>
                     </li>
                 </ul>
                 <div
@@ -32,121 +38,76 @@
                 </div>
             </div>
         </div>
-
-
-
-        <div id="hero" class="flex flex-column pt-4 px-4 lg:px-8 overflow-hidden"
+        <router-outlet></router-outlet>
+        <!-- <div id="hero" class="flex flex-column pt-4 px-4 lg:px-8 overflow-hidden"
             style="background: linear-gradient(0deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)), radial-gradient(77.36% 256.97% at 77.36% 57.52%, #EEEFAF 0%, #C3E3FA 100%);">
             <div class="mx-4 md:mx-8 mt-0 md:mt-4">
-                <h1 class="text-6xl font-bold text-gray-900 line-height-2"><span class="font-light block">This is
-                    </span>some Random Text</h1>
-                <p class="font-normal text-2xl line-height-3 md:mt-3 text-gray-700">Which can be replaced with some
-                    markup </p>
+                <p class="font-normal text-2xl line-height-3 md:mt-3 text-gray-700">Whether you are just starting on
+                    your financial journey or looking for more sophisticated wealth management strategies, KARES
+                    INVESTMENTS is here to guide you every step of the way.</p>
                 <button pButton pRipple type="button" label="Contact Us" style="margin-bottom:10px; border-radius: 5px"
                     [routerLink]="'/register'"
                     class="p-button-rounded text-xl border-none mt-3 bg-blue-500 font-normal line-height-3 px-3 text-white"></button>
             </div>
-            <!-- <div class="flex justify-content-center md:justify-content-end">
-                <img src="assets/demo/images/landing/screen-1.png" alt="Hero Image" class="w-9 md:w-auto">
-            </div> -->
-        </div>
+        </div> -->
 
-        <div id="features" class="py-4 px-4 lg:px-8 mt-5 mx-0 lg:mx-8">
+        <!-- <div id="features" class="py-4 px-4 lg:px-8 mt-5 mx-0 lg:mx-8">
             <div class="grid justify-content-center">
                 <div class="col-12 text-center mt-8 mb-4">
-                    <h2 class="text-900 font-normal mb-2">What We do..</h2>
+                    <h2 class="text-900 font-normal mb-2">Why Choose Kares Investments</h2>
                 </div>
 
                 <div class="col-12 md:col-12 lg:col-4 p-0 lg:pr-5 lg:pb-5 mt-4 lg:mt-0">
                     <div
-                        style="height:160px; padding:2px; border-radius:10px; background: linear-gradient(90deg, rgba(253, 228, 165, 0.2),rgba(187, 199, 205, 0.2)), linear-gradient(180deg, rgba(253, 228, 165, 0.2),rgba(187, 199, 205, 0.2));">
+                        style="height:200px; padding:2px; border-radius:10px; background: linear-gradient(90deg, rgba(253, 228, 165, 0.2),rgba(187, 199, 205, 0.2)), linear-gradient(180deg, rgba(253, 228, 165, 0.2),rgba(187, 199, 205, 0.2));">
                         <div class="p-3 surface-card h-full" style="border-radius:8px;">
                             <div class="flex align-items-center justify-content-center bg-yellow-200 mb-3"
                                 style="width:3.5rem;height:3.5rem; border-radius:10px;">
                                 <i class="pi pi-fw pi-users text-2xl text-yellow-700"></i>
                             </div>
-                            <h5 class="mb-2 text-900">Easy to Use</h5>
-                            <span class="text-600">Easy to Use</span>
+                            <h5 class="mb-2 text-900">Personalized Service</h5>
+                            <span class="text-600">We recognize that every client is unique. Our individualized approach
+                                ensures that your financial plan is designed specifically to meet your needs and
+                                goals.</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-12 md:col-12 lg:col-4 p-0 lg:pr-5 lg:pb-5 mt-4 lg:mt-0">
                     <div
-                        style="height:160px; padding:2px; border-radius:10px; background: linear-gradient(90deg, rgba(145,226,237,0.2),rgba(251, 199, 145, 0.2)), linear-gradient(180deg, rgba(253, 228, 165, 0.2), rgba(172, 180, 223, 0.2));">
+                        style="height:200px; padding:2px; border-radius:10px; background: linear-gradient(90deg, rgba(145,226,237,0.2),rgba(251, 199, 145, 0.2)), linear-gradient(180deg, rgba(253, 228, 165, 0.2), rgba(172, 180, 223, 0.2));">
                         <div class="p-3 surface-card h-full" style="border-radius:8px;">
                             <div class="flex align-items-center justify-content-center bg-cyan-200 mb-3"
                                 style="width:3.5rem;height:3.5rem; border-radius:10px;">
                                 <i class="pi pi-fw pi-palette text-2xl text-cyan-700"></i>
                             </div>
-                            <h5 class="mb-2 text-900">Fresh Design</h5>
-                            <span class="text-600">Fresh Design</span>
+                            <h5 class="mb-2 text-900">Commitment to Excellence</h5>
+                            <span class="text-600">We are committed to providing exceptional service and delivering
+                                results that help our clients achieve financial independence and peace of mind.</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-12 md:col-12 lg:col-4 p-0 lg:pb-5 mt-4 lg:mt-0">
                     <div
-                        style="height:160px; padding:2px; border-radius:10px; background: linear-gradient(90deg, rgba(145, 226, 237, 0.2), rgba(172, 180, 223, 0.2)), linear-gradient(180deg, rgba(172, 180, 223, 0.2), rgba(246, 158, 188, 0.2));">
+                        style="height:200px; padding:2px; border-radius:10px; background: linear-gradient(90deg, rgba(145, 226, 237, 0.2), rgba(172, 180, 223, 0.2)), linear-gradient(180deg, rgba(172, 180, 223, 0.2), rgba(246, 158, 188, 0.2));">
                         <div class="p-3 surface-card h-full" style="border-radius:8px;">
                             <div class="flex align-items-center justify-content-center bg-indigo-200"
                                 style="width:3.5rem;height:3.5rem; border-radius:10px;">
                                 <i class="pi pi-fw pi-map text-2xl text-indigo-700"></i>
                             </div>
-                            <h5 class="mb-2 text-900">Well Documented</h5>
-                            <span class="text-600">Well Documented</span>
+                            <h5 class="mb-2 text-900">Client-Centric Approach</h5>
+                            <span class="text-600">Your success is our top priority. We take the time to listen,
+                                understand, and craft a plan that supports your vision for the future.</span>
                         </div>
                     </div>
                 </div>
-
-                <div class="col-12 md:col-12 lg:col-4 p-0 lg:pr-5 lg:pb-5 mt-4 lg:mt-0">
-                    <div
-                        style="height:160px; padding:2px; border-radius:10px; background: linear-gradient(90deg, rgba(187, 199, 205, 0.2),rgba(251, 199, 145, 0.2)), linear-gradient(180deg, rgba(253, 228, 165, 0.2),rgba(145, 210, 204, 0.2));">
-                        <div class="p-3 surface-card h-full" style="border-radius:8px;">
-                            <div class="flex align-items-center justify-content-center bg-bluegray-200 mb-3"
-                                style="width:3.5rem;height:3.5rem; border-radius:10px;">
-                                <i class="pi pi-fw pi-id-card text-2xl text-bluegray-700"></i>
-                            </div>
-                            <h5 class="mb-2 text-900">Responsive Layout</h5>
-                            <span class="text-600">Responsive Layout</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 md:col-12 lg:col-4 p-0 lg:pr-5 lg:pb-5 mt-4 lg:mt-0">
-                    <div
-                        style="height:160px; padding:2px; border-radius:10px; background: linear-gradient(90deg, rgba(187, 199, 205, 0.2),rgba(246, 158, 188, 0.2)), linear-gradient(180deg, rgba(145, 226, 237, 0.2),rgba(160, 210, 250, 0.2));">
-                        <div class="p-3 surface-card h-full" style="border-radius:8px;">
-                            <div class="flex align-items-center justify-content-center bg-orange-200 mb-3"
-                                style="width:3.5rem;height:3.5rem; border-radius:10px;">
-                                <i class="pi pi-fw pi-star text-2xl text-orange-700"></i>
-                            </div>
-                            <h5 class="mb-2 text-900">Clean Code</h5>
-                            <span class="text-600">Clean Code</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 md:col-12 lg:col-4 p-0 lg:pb-5 mt-4 lg:mt-0">
-                    <div
-                        style="height:160px; padding:2px; border-radius:10px; background: linear-gradient(90deg, rgba(251, 199, 145, 0.2), rgba(246, 158, 188, 0.2)), linear-gradient(180deg, rgba(172, 180, 223, 0.2), rgba(212, 162, 221, 0.2));">
-                        <div class="p-3 surface-card h-full" style="border-radius:8px;">
-                            <div class="flex align-items-center justify-content-center bg-pink-200 mb-3"
-                                style="width:3.5rem;height:3.5rem; border-radius:10px;">
-                                <i class="pi pi-fw pi-moon text-2xl text-pink-700"></i>
-                            </div>
-                            <h5 class="mb-2 text-900">Dark Mode</h5>
-                            <span class="text-600">Dark Mode</span>
-                        </div>
-                    </div>
-                </div>
-
                 <div class="col-12 mt-8 mb-8 p-2 md:p-8"
                     style="border-radius:20px; background:linear-gradient(0deg, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6)), radial-gradient(77.36% 256.97% at 77.36% 57.52%, #EFE1AF 0%, #C3DCFA 100%);">
                     <div
                         class="flex flex-column justify-content-center align-items-center text-center px-3 py-3 md:py-0">
                         <h3 class="text-gray-900 mb-2">Kares Investments</h3>
-                        <span class="text-gray-600 text-2xl">Kares Investments</span>
+                        <span class="text-gray-600 text-1xl">Your Partner in Financial Growth</span>
                         <p class="text-gray-900 sm:line-height-2 md:line-height-4 text-2xl mt-4"
                             style="max-width:800px;">“Some Text about The Company”</p>
                         <img src="assets/demo/images/landing/peak-logo.svg" class="mt-4" alt="Company logo">
@@ -154,6 +115,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 </div>
+<p-toast></p-toast>
