--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -19,7 +19,8 @@
 
                     <label for="password1" class="block text-900 font-medium text-xl mb-2">Password</label>
                     <p-password id="password1" [(ngModel)]="password" placeholder="Password" [toggleMask]="true"
-                        styleClass="mb-5" inputStyleClass="w-full p-3 md:w-30rem"></p-password>
+                        styleClass="mb-5" inputStyleClass="w-full p-3 md:w-30rem"
+                        (keydown.enter)="login()"></p-password>
 
                     <div class="flex align-items-center justify-content-between mb-5 gap-5">
                         <!-- <div class="flex align-items-center">
