--- a/src/app/user/user-dashboard.component.html
+++ b/src/app/user/user-dashboard.component.html
@@ -1,33 +1,55 @@
+<div class="container-fluid p-0">
+    <div class="row m-0">
+        <div class="col-12 text-center py-3 bg-dark text-white">
+            <h1>Welcome, {{userName}}!</h1>
+        </div>
+    </div>
+</div>
 <div class="grid">
-
     <div class="col-12">
         <div class="card">
-            <h5>Recent Transactions</h5>
-            <p-table [value]="products" [paginator]="true" [rows]="5" responsiveLayout="scroll">
+            <p-table #userTransactionsGrid [value]="userTransactions" [paginator]="true" [rows]="10"
+                responsiveLayout="scroll" [globalFilterFields]="['amount', 'portfolioName']">
+                <ng-template pTemplate="caption">
+                    <div class="flex">
+                        <p-iconField iconPosition="left" class="ml-auto">
+                            <p-inputIcon>
+                                <i class="pi pi-search"></i>
+                            </p-inputIcon>
+                            <input pInputText type="text" #searchInput
+                                (input)="userTransactionsGrid.filterGlobal(searchInput.value, 'contains')"
+                                placeholder="Search keyword" />
+                        </p-iconField>
+                    </div>
+                </ng-template>
                 <ng-template pTemplate="header">
                     <tr>
-                        <!-- <th>Image</th> -->
-                        <th pSortableColumn="name">Name <p-sortIcon field="name"></p-sortIcon></th>
-                        <th pSortableColumn="price">Price <p-sortIcon field="price"></p-sortIcon></th>
-                        <th>View</th>
+                        <th>User Name</th>
+                        <th>Email</th>
+                        <th>Amount</th>
+                        <th>Portfolio</th>
+                        <th>Transaction Date</th>
+                        <th>Transaction Type</th>
+                        <th>Transaction Category</th>
+                        <th>Payment Mode</th>
+                        <!-- <th>View</th> -->
                     </tr>
                 </ng-template>
-                <ng-template pTemplate="body" let-product>
+                <ng-template pTemplate="body" let-transaction>
                     <tr>
-                        <!-- <td style="width: 15%; min-width: 5rem;">
-                            <img src="assets/demo/images/product/{{product.image}}" class="shadow-4"
-                                alt="{{product.name}}" width="50">
-                        </td> -->
-                        <td style="width: 35%; min-width: 7rem;">{{product.name}}</td>
-                        <td style="width: 35%; min-width: 8rem;">{{product.price | currency:'USD'}}</td>
-                        <td style="width: 15%;">
-                            <button pButton pRipple type="button" icon="pi pi-search"
-                                class="p-button p-component p-button-text p-button-icon-only"></button>
-                        </td>
+                        <td>{{transaction.userName}}</td>
+                        <td>{{transaction.email}}</td>
+                        <td>{{transaction.amount}}</td>
+                        <td>{{transaction.portfolioName}}</td>
+                        <td>{{transaction.transactionDate | date: 'dd/MM/yyyy'}}</td>
+                        <td>{{transaction.transactionType}}</td>
+                        <td>{{transaction.transactionCategory}}</td>
+                        <td>{{transaction.paymentMode}}</td>
+                        <!-- <td><p-button icon="pi pi-pencil" class="mr-2" [rounded]="true" [outlined]="true" severity="success"
+                                (onClick)="editTransaction(transaction)" /></td> -->
                     </tr>
                 </ng-template>
             </p-table>
         </div>
-
     </div>
 </div>
