--- a/src/app/admin/user-transactions/user-transactions.component.html
+++ b/src/app/admin/user-transactions/user-transactions.component.html
@@ -94,7 +94,7 @@
                 <div class="field col">
                     <label for="amount">Amount</label>
                     <p-inputNumber [(ngModel)]="userTransaction.amount" name="amount" mode="currency" inputId="amount"
-                        currency="INR" currencyDisplay="code" locale="en-IN" />
+                        currency="USD" currencyDisplay="code" locale="en-US" />
                 </div>
             </div>
             <div class="field">
