--- a/src/app/shared/change-password/change-password.component.html
+++ b/src/app/shared/change-password/change-password.component.html
@@ -1,4 +1,4 @@
-<form #passwordForm="ngForm" (ngSubmit)="onSubmit(passwordForm)">
+<form #passwordForm="ngForm" (ngSubmit)="onSubmit()">
     <div class="field">
         <label for="password">Password</label>
         <p-password id="password" name="password" [(ngModel)]="password" #passwordField="ngModel" required minlength="8"
