--- a/src/app/admin/admin-home/admin-home.component.html
+++ b/src/app/admin/admin-home/admin-home.component.html
@@ -3,7 +3,7 @@
         <div class="card mb-0">
             <div class="flex justify-content-between mb-3">
                 <div>
-                    <span class="block text-500 font-medium mb-3">Orders</span>
+                    <span class="block text-500 font-medium mb-3">Customers</span>
                     <div class="text-900 font-medium text-xl">152</div>
                 </div>
                 <div class="flex align-items-center justify-content-center bg-blue-100 border-round"
@@ -12,15 +12,15 @@
                 </div>
             </div>
             <span class="text-green-500 font-medium">24 new </span>
-            <span class="text-500">since last visit</span>
+            <span class="text-500">since this month</span>
         </div>
     </div>
     <div class="col-12 lg:col-6 xl:col-3">
         <div class="card mb-0">
             <div class="flex justify-content-between mb-3">
                 <div>
-                    <span class="block text-500 font-medium mb-3">Revenue</span>
-                    <div class="text-900 font-medium text-xl">$2.100</div>
+                    <span class="block text-500 font-medium mb-3">Investment amount</span>
+                    <div class="text-900 font-medium text-xl">₹ 2.100</div>
                 </div>
                 <div class="flex align-items-center justify-content-center bg-orange-100 border-round"
                     [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
@@ -51,7 +51,7 @@
         <div class="card mb-0">
             <div class="flex justify-content-between mb-3">
                 <div>
-                    <span class="block text-500 font-medium mb-3">Comments</span>
+                    <span class="block text-500 font-medium mb-3">User Interests</span>
                     <div class="text-900 font-medium text-xl">152 Unread</div>
                 </div>
                 <div class="flex align-items-center justify-content-center bg-purple-100 border-round"
