--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,14 +4,9 @@
         <div
             style="border-radius:56px; padding:0.3rem; background: linear-gradient(180deg, var(--primary-color) 10%, rgba(33, 150, 243, 0) 30%);">
             <div class="w-full surface-card py-8 px-5 sm:px-8" style="border-radius:53px">
-                <!-- <div class="text-center mb-5">
-                    <img src="assets/demo/images/login/avatar.png" alt="Image" height="50" class="mb-3">
-                    <div class="text-900 text-3xl font-medium mb-3">Welcome, Isabel!</div>
-                    <span class="text-600 font-medium">Sign in to continue</span>
-                </div> -->
-                <p *ngIf="validationErrors.length > 0" class='text-center'>
+                <!-- <p *ngIf="validationErrors.length > 0" class='text-center'>
                     <small class='text-danger'>{{validationErrors}}</small>
-                </p>
+                </p> -->
                 <div>
                     <label for="email1" class="block text-900 text-xl font-medium mb-2">Email</label>
                     <input id="email1" type="text" placeholder="Email address" pInputText class="w-full md:w-30rem mb-5"
@@ -30,7 +25,7 @@
                         <a class="font-medium no-underline ml-2 text-right cursor-pointer"
                             style="color: var(--primary-color)">Forgot password?</a>
                     </div>
-                    <button pButton pRipple label="Sign In" class="w-full p-3 text-xl" (click)="login()"></button>
+                    <button pButton label="Sign In" class="w-full p-3 text-xl" (click)="login()"></button>
                 </div>
             </div>
         </div>
