--- a/src/app/shared/user-profile/user-profile.component.html
+++ b/src/app/shared/user-profile/user-profile.component.html
@@ -1,4 +1,4 @@
-<form #userProfileForm="ngForm" (ngSubmit)="updateDetails(userProfileForm)">
+<form #userProfileForm="ngForm" (ngSubmit)="updateDetails()">
     <div class="formgrid grid mb-2">
         <div class="field col">
             <label for="firstName">First Name</label>
