--- a/src/app/shared/user-dropdown/user-dropdown.component.html
+++ b/src/app/shared/user-dropdown/user-dropdown.component.html
@@ -4,7 +4,8 @@
 </div>
 
 <!-- User Selection Dialog -->
-<p-dialog [(visible)]="isUserDialogVisible" header="Select User" [modal]="true" [style]="{width: '30vw'}">
+<p-dialog [(visible)]="isUserDialogVisible" header="Select User" [modal]="true" [style]="{ width: '45vw'}"
+    appendTo="body">
     <div>
         <!-- Search Input -->
         <div style="margin-bottom: 10px;">
