--- a/src/app/admin/admin-home/admin-home.component.html
+++ b/src/app/admin/admin-home/admin-home.component.html
@@ -4,14 +4,14 @@
             <div class="flex justify-content-between mb-3">
                 <div>
                     <span class="block text-500 font-medium mb-3">Customers</span>
-                    <div class="text-900 font-medium text-xl">152</div>
+                    <div class="text-900 font-medium text-xl">{{dashboardStats?.activeUsers}}</div>
                 </div>
                 <div class="flex align-items-center justify-content-center bg-blue-100 border-round"
                     [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
                     <i class="pi pi-shopping-cart text-blue-500 text-xl"></i>
                 </div>
             </div>
-            <span class="text-green-500 font-medium">24 new </span>
+            <span class="text-green-500 font-medium">{{dashboardStats?.usersJoinedThisMonth}} new </span>
             <span class="text-500">since this month</span>
         </div>
     </div>
@@ -20,7 +20,7 @@
             <div class="flex justify-content-between mb-3">
                 <div>
                     <span class="block text-500 font-medium mb-3">Investment amount</span>
-                    <div class="text-900 font-medium text-xl">₹ 2.100</div>
+                    <div class="text-900 font-medium text-xl">$ {{dashboardStats?.totalInvestedAmount}}</div>
                 </div>
                 <div class="flex align-items-center justify-content-center bg-orange-100 border-round"
                     [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
@@ -35,16 +35,16 @@
         <div class="card mb-0">
             <div class="flex justify-content-between mb-3">
                 <div>
-                    <span class="block text-500 font-medium mb-3">Customers</span>
-                    <div class="text-900 font-medium text-xl">28441</div>
+                    <span class="block text-500 font-medium mb-3">User Transactions</span>
+                    <div class="text-900 font-medium text-xl">{{dashboardStats?.totalTransactions}}</div>
                 </div>
                 <div class="flex align-items-center justify-content-center bg-cyan-100 border-round"
                     [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
                     <i class="pi pi-inbox text-cyan-500 text-xl"></i>
                 </div>
             </div>
-            <span class="text-green-500 font-medium">520 </span>
-            <span class="text-500">newly registered</span>
+            <span class="text-green-500 font-medium">{{dashboardStats?.transactionsThisMonth}} </span>
+            <span class="text-500">this month</span>
         </div>
     </div>
     <div class="col-12 lg:col-6 xl:col-3">
@@ -52,15 +52,21 @@
             <div class="flex justify-content-between mb-3">
                 <div>
                     <span class="block text-500 font-medium mb-3">User Interests</span>
-                    <div class="text-900 font-medium text-xl">152 Unread</div>
+                    <div class="text-900 font-medium text-xl">{{dashboardStats?.totalInterests}}</div>
                 </div>
                 <div class="flex align-items-center justify-content-center bg-purple-100 border-round"
                     [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
                     <i class="pi pi-comment text-purple-500 text-xl"></i>
                 </div>
             </div>
-            <span class="text-green-500 font-medium">85 </span>
-            <span class="text-500">responded</span>
+            <span class="text-green-500 font-medium">{{dashboardStats?.pendingInterests}} </span>
+            <span class="text-500">pending</span>
         </div>
     </div>
+
+</div>
+<div class="col-12">
+    <highcharts-chart [Highcharts]="Highcharts" [options]="chartOptions"
+        style="width: 100%; height: 400px; display: block;" [(update)]="updateFlag">
+    </highcharts-chart>
 </div>
