--- a/src/assets/layout/styles/layout/layout.scss
+++ b/src/assets/layout/styles/layout/layout.scss
@@ -10,3 +10,8 @@
 @import "./_responsive";
 @import "./_utils";
 @import "./_typography";
+
+.p-datatable .p-datatable-tbody>tr>td,
+th {
+    padding: 0.25rem 0.25rem !important;
+}
