--- a/src/app/admin/admin-home/admin-home.component.html
+++ b/src/app/admin/admin-home/admin-home.component.html
@@ -8,7 +8,7 @@
                 </div>
                 <div class="flex align-items-center justify-content-center bg-blue-100 border-round"
                     [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
-                    <i class="pi pi-shopping-cart text-blue-500 text-xl"></i>
+                    <i class="pi pi-users text-blue-500 text-xl"></i>
                 </div>
             </div>
             <span class="text-green-500 font-medium">{{dashboardStats?.usersJoinedThisMonth}} new </span>
@@ -24,7 +24,7 @@
                 </div>
                 <div class="flex align-items-center justify-content-center bg-orange-100 border-round"
                     [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
-                    <i class="pi pi-map-marker text-orange-500 text-xl"></i>
+                    <i class="pi pi-dollar text-orange-500 text-xl"></i>
                 </div>
             </div>
             <span class="text-green-500 font-medium">%52+ </span>
@@ -40,7 +40,7 @@
                 </div>
                 <div class="flex align-items-center justify-content-center bg-cyan-100 border-round"
                     [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
-                    <i class="pi pi-inbox text-cyan-500 text-xl"></i>
+                    <i class="pi pi-list text-cyan-500 text-xl"></i>
                 </div>
             </div>
             <span class="text-green-500 font-medium">{{dashboardStats?.transactionsThisMonth}} </span>
@@ -63,10 +63,16 @@
             <span class="text-500">pending</span>
         </div>
     </div>
-
 </div>
-<div class="col-12">
-    <highcharts-chart [Highcharts]="Highcharts" [options]="chartOptions"
-        style="width: 100%; height: 400px; display: block;" [(update)]="updateFlag">
-    </highcharts-chart>
+<div class="row">
+    <div class="col-8">
+        <highcharts-chart [Highcharts]="Highcharts" [options]="chartOptions"
+            style="width: 100%; height: 400px; display: block;" [(update)]="updateFlag">
+        </highcharts-chart>
+    </div>
+    <div class="col-4">
+        <highcharts-chart [Highcharts]="Highcharts" [options]="pieChartOptions"
+            style="width: 100%; height: 400px; display: block;" [(update)]="updateFlag">
+        </highcharts-chart>
+    </div>
 </div>
