multi column chart + transaction changes

--- a/src/app/admin/admin-home/admin-home.component.html
+++ b/src/app/admin/admin-home/admin-home.component.html
@@ -3,7 +3,7 @@
         <div class="card mb-0">
             <div class="flex justify-content-between mb-3">
                 <div>
-                    <span class="block text-500 font-medium mb-3">Customers</span>
+                    <span class="block text-500 font-medium mb-3">Users</span>
                     <div class="text-900 font-medium text-xl">{{dashboardStats?.activeUsers}}</div>
                 </div>
                 <div class="flex align-items-center justify-content-center bg-blue-100 border-round"
@@ -27,8 +27,8 @@
                     <i class="pi pi-dollar text-orange-500 text-xl"></i>
                 </div>
             </div>
-            <span class="text-green-500 font-medium">%52+ </span>
-            <span class="text-500">since last week</span>
+            <span class="text-green-500 font-medium">0% +</span>
+            <span class="text-500">since this month</span>
         </div>
     </div>
     <div class="col-12 lg:col-6 xl:col-3">
@@ -43,8 +43,8 @@
                     <i class="pi pi-list text-cyan-500 text-xl"></i>
                 </div>
             </div>
-            <span class="text-green-500 font-medium">{{dashboardStats?.transactionsThisMonth}} </span>
-            <span class="text-500">this month</span>
+            <span class="text-green-500 font-medium">{{dashboardStats?.transactionsThisMonth}} new</span>
+            <span class="text-500">since this month</span>
         </div>
     </div>
     <div class="col-12 lg:col-6 xl:col-3">
